// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when there are existing saved payments 1`] = `
<div
  className="root"
>
  Title
  <h1
    className="heading"
  >
    Saved Payments
  </h1>
  <div
    className="content"
  >
    <mock-PaymentCard
      0="a"
    />
    <mock-PaymentCard
      0="b"
    />
    <mock-PaymentCard
      0="c"
    />
  </div>
</div>
`;

exports[`renders correctly when there are no existing saved payments 1`] = `
<div
  className="root"
>
  Title
  <h1
    className="heading"
  >
    Saved Payments
  </h1>
  <div
    className="content"
  />
</div>
`;
